--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,14 @@
 @import "tailwindcss";
 
+/* styles/globals.css */
+@font-face {
+  font-family: 'tthoves-regular';
+  src: url('/fonts/TT-Hoves-Regular.otf') format('opentype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
